tests/ui/inference/hint-closure-signature-119266.stderr
error[E0308]: mismatched types
  --> $DIR/hint-closure-signature-119266.rs:5:22
   |
LL |     let x = |a: u8, b: (usize, u32), c: fn() -> char| -> String { "I love beans.".to_string() };
   |             --------------------------------------------------- the found closure
...
LL |     let x: fn(i32) = x;
   |            -------   ^ incorrect number of function parameters
   |            |
   |            expected due to this
   |
   = note: expected fn pointer `fn(i32)`
                 found closure `{closure@$DIR/hint-closure-signature-119266.rs:2:13: 2:64}`
   = note: closure has signature: `fn(u8, (usize, u32), fn() -> char) -> String`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
